Revert "Fix social media icon colors in dark mode"
This reverts commit 61ead1a194111fe8b1658c815fc03fa207067af1.

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -743,14 +743,6 @@ footer {
       }
     }
   }
-  .fa-stack {
-    .fa-circle {
-      color: @gray-dark;
-    }
-    .fa-inverse {
-      color: #1a1a1a;
-    }
-  }
 }
 // Button Styles
 
